Creates grid clear function and grid size range slider

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class='sliderDiv'>
-    <input type="range" id="gridSizeSlider" min="1" max="100" value="16">
+    <input type="range" id="range-slider" min="16" max="64" value="16">
+    <div id="slider-value" class="slider-value">Grid Size: 16x16</div>
     </div>
     <div class="container"></div>
     <div class='button-container'>
