Implements Hero section banner and css stylization

--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
     <script src='script.js'></script>
 </head>
 <body>
-    <div class='sliderDiv'>
-    <input type="range" id="range-slider" min="16" max="64" value="16">
-    <div id="slider-value" class="slider-value">Grid Size: 16x16</div>
-    </div>
-    <div class="container"></div>
-    <div class='button-container'>
-    <button id="blackButton">Black Color</button>
-    <button id="rainbowButton">Rainbow Color</button>
-    <button id="resetButton">Clear All</button>
-    </div>
+    <header class="hero-section">
+        <h1 class="hero-title">Etch-A-Sketch</h1>
+        <p class="hero-text">Create your own digital masterpiece!</p>
+    </header>
+    <main>
+        <div class='sliderDiv'>
+            <input type="range" id="range-slider" min="16" max="64" value="16">
+            <div id="slider-value" class="slider-value">Grid Size: 16x16</div>
+        </div>
+        <div class="container"></div>
+        <div class='button-container'>
+            <button id="blackButton">Black Color</button>
+            <button id="rainbowButton">Rainbow Color</button>
+            <button id="resetButton">Clear All</button>
+        </div>
+    </main>
 </body>
 </html>
